<resources>
    <string name="app_name">lab1_sofiia</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create an account</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm">Confirm your password</string>
    <string name="go_back_arrow">Go back arrow</string>
    <string name="app_logo">App Logo</string>
    <string name="name">Name</string>
</resources>