<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sign_up_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/curved_toolbar"
        android:paddingStart="@dimen/toolbar_padding"
        android:paddingEnd="@dimen/toolbar_padding"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/sign_up"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:titleTextColor="@color/white">
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/app_logo"

        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@id/form_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_toolbar" />

    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/sign_up_button"
        app:layout_constraintEnd_toStartOf="@id/end_line_margin"
        app:layout_constraintStart_toEndOf="@id/start_line_margin"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            style="@style/AppInputTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"

            app:layout_constraintBottom_toTopOf="@id/email_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input"
                style="@style/AppInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/AppInputTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"

            app:layout_constraintBottom_toTopOf="@id/password_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                style="@style/AppInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/password_layout"
            style="@style/AppInputTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"

            app:layout_constraintTop_toBottomOf="@id/email_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                style="@style/AppInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/confirm_password_layout"
            style="@style/AppInputTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm"

            app:layout_constraintTop_toBottomOf="@id/password_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_input"
                style="@style/AppInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/sign_up_button"
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        android:gravity="center"
        android:text="@string/sign_up"
        app:backgroundTint="@color/aqua"
        app:layout_constraintEnd_toStartOf="@id/end_line_margin"
        app:layout_constraintStart_toEndOf="@id/start_line_margin"
        app:layout_constraintTop_toBottomOf="@id/form_layout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_line_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_line_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>
